--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
+
+<!-- changes -->
+
 <body>
     <div class="container border mt-1 px-0">
         <div class="bg-light mb-2 p-1 border-bottom">
@@ -16,17 +19,19 @@
         <div class="alert alert-danger mx-3 my-3" role="alert">
             Some fields are missing
         </div>
+
+        <!-- changed id names of text inputs in the row in the div, line 24 -->
         <div class="row ms-1">
             <div class="col-5"> 
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Card #</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="XXXXXXXXXXXXXXXXX">
+                    <input type="text" class="form-control" id="cardTextInput" placeholder="XXXXXXXXXXXXXXXXX">
                 </div>
             </div>
             <div class="col-2">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">CVC #</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="0000">
+                    <input type="text" class="form-control" id="cvcTextInput" placeholder="0000">
                 </div>
             </div>
             <div class="col-4">
@@ -39,17 +44,19 @@
                 </div>
             </div>
         </div>
+
+        <!-- changed id names of text inputs in the row in the div, line 49 -->
         <div class="row ms-1">
             <div class="col-6"> 
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                    <input type="text" class="form-control" id="firstName">
                 </div>
             </div>    
             <div class="col-5"> 
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                    <input type="text" class="form-control" id="lastName">
                 </div>
             </div>    
         </div>
@@ -130,27 +137,30 @@
         <div class="row">
             <div class="col-5 mx-3">
                 <label for="exampleFormControlInput1" class="form-label">We Accept:</label>
+
+                <!-- changed id names of radio buttons -->
+
                 <div class="bg-secondary rounded d-flex p-1 justify-content-around" style="max-width: 310px;">
                     <div class="form-check mx-2">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="visaCard">
                         <label class="form-check-label" for="flexRadioDefault1">
                             <i class="fa-brands fa-cc-visa fa-2x"></i>
                         </label>
                       </div>
                       <div class="form-check mx-2">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="masterCard" checked>
                         <label class="form-check-label" for="flexRadioDefault2">
                             <i class="fa-brands fa-cc-mastercard fa-2x"></i>
                         </label>
                       </div>
                       <div class="form-check mx-2">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="discoverCard">
                         <label class="form-check-label" for="flexRadioDefault1">
                             <i class="fa-brands fa-cc-discover fa-2x"></i>
                         </label>
                       </div>
                       <div class="form-check mx-2">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="dinersClubCard">
                         <label class="form-check-label" for="flexRadioDefault2">
                             <i class="fa-brands fa-cc-diners-club fa-2x"></i>
                         </label>
